--- a/src/components/priceCaluculation/pricecalculation.scss
+++ b/src/components/priceCaluculation/pricecalculation.scss
@@ -1,7 +1,6 @@
 .price {
   width: 100%;
-  height: 225px;
-  background: #ffffff;
+  background: var(--color-white);
   border-radius: 16px;
   margin-top: 30px;
   padding: 45px 125px 40px;
@@ -13,7 +12,7 @@
   margin-bottom: 25px;
   & :nth-child(1),
   & :nth-child(3) {
-    color: #000034;
+    color: var(--color-text-blackLight);
     font-weight: 500;
     font-size: 20px;
     line-height: 30px;
@@ -26,7 +25,7 @@
     font-weight: 600;
     font-size: 30px;
     line-height: 40px;
-    color: #000034;
+    color: var(--color-text-blackLight);
     display: inline-block;
     margin-right: 12px;
   }
@@ -42,17 +41,16 @@
   width: 100%;
   max-width: 540px;
   height: 80px;
-  background: #eff0f5;
-  opacity: 0.5;
+  background-color: #eff0f5;
   border-radius: 16px;
   display: flex;
   align-items: center;
   justify-content: center;
-  & :nth-child(2),
-  & :nth-child(4) {
+  & > :nth-child(2),
+  & > :nth-child(4) {
     display: inline-block;
-    color: #000034;
-    background: #ffffff;
+    color: var(--color-text-blackLight);
+    background-color: var(--color-white);
     border-radius: 16px;
     width: 57px;
     height: 50px;
@@ -61,25 +59,66 @@
     justify-content: center;
     cursor: pointer;
   }
-  & :nth-child(1) {
-    display: inline-block;
+  & > :nth-child(1) {
     margin-right: 39px;
     font-weight: 500;
     font-size: 20px;
     line-height: 30px;
-    color: #4b4e68;
+    color: var(--color-texts);
   }
-  & :nth-child(2) {
+  & > :nth-child(2) {
     margin-right: 30px;
   }
-  & :nth-child(3) {
+  & > :nth-child(3) {
     display: inline-block;
     margin-right: 30px;
     font-weight: 600;
     font-size: 20px;
     line-height: 30px;
-    color: #000034 !important;
+    color: var(--color-text-blackLight);
   }
-  & :nth-child(4) {
+}
+
+.price__buy {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  button {
+    margin-top: 20px;
+    width: 200px;
+    height: 40px;
+    background-color: var(--color-text-blackLight);
+    border-radius: 12px;
+    font-weight: 600;
+    font-size: 18.4286px;
+  }
+}
+
+@media (max-width: 744px) {
+  .price {
+    padding: 40px;
+  }
+  .price__bottom {
+    margin: 0px auto;
+  }
+}
+@media (max-width: 550px) {
+  .price {
+    padding: 40px 16px 40px;
+  }
+  .price__bottom {
+    padding: 0px 20px 0px;
+    margin: 0px auto;
+    & > :nth-child(2) {
+      margin-right: 30px;
+      width: 50px;
+    }
+    & > :nth-child(4) {
+      width: 50px;
+    }
+    & > :nth-child(2),
+    & > :nth-child(3) {
+      margin-right: 20px;
+    }
   }
 }
