--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -1,4 +1,62 @@
 .slider {
   width: 100%;
-  height: 520px;
+}
+.carousel-item {
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+.carousel-indicators {
+  display: none;
+}
+
+.carousel-control-next,
+.carousel-control-prev {
+  border: 1px solid var(--color-white);
+  width: 44px;
+  height: 44px;
+  margin: auto;
+  border-radius: 25px;
+  margin-right: 30px;
+}
+.carousel-control-next:hover,
+.carousel-control-prev:hover {
+  background-image: url(../../assets/svg/Vectorslider.svg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: var(--color-white);
+  opacity: 0.5;
+  span {
+    display: none;
+  }
+}
+.carousel-control-prev {
+  margin-left: 30px;
+}
+.carousel-control-prev:hover {
+  transform: rotate(180deg);
+}
+@media (max-width: 375px) {
+  .carousel-control-next,
+  .carousel-control-prev {
+    width: 30px;
+    height: 30px;
+    margin: auto;
+
+    img {
+      width: 6px;
+      height: 13px;
+    }
+    span {
+      width: 20px;
+      height: 20px;
+    }
+  }
+  .carousel-control-prev {
+    margin-left: 12px;
+  }
+  .carousel-control-next {
+    margin-right: 12px;
+  }
 }
