--- a/src/page/home/upsell.scss
+++ b/src/page/home/upsell.scss
@@ -1,5 +1,3 @@
-.home {
-}
 .home__container {
   padding-top: 60px;
 }
@@ -20,10 +18,8 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 26px;
-  color: #4b4e68;
+  color: var(--color-texts);
 }
-
-
 
 .content__text-1 {
   margin-bottom: 30px;
@@ -41,12 +37,28 @@
     font-weight: 600;
     font-size: 24.4286px;
     line-height: 33px;
-    color: #ffffff;
+    color: var(--color-white);
     display: flex;
     align-items: center;
     justify-content: center;
     img {
       margin-left: 13px;
     }
+  }
+}
+
+@media (max-width: 375px) {
+  .content__buttons {
+    margin: 30px 0px 30px;
+    button {
+      width: 100%;
+      height: 42px;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 20px;
+    }
+  }
+  .content__text {
+    margin: 30px 0px 30px;
   }
 }
