--- a/src/page/thankyou/thankyou.scss
+++ b/src/page/thankyou/thankyou.scss
@@ -7,6 +7,10 @@
   .show__option {
     display: none;
   }
+  .subcart {
+    height: auto;
+    padding: 35px 30px 35px;
+  }
 }
 
 .thank__container-lefth {
@@ -16,6 +20,7 @@
   padding-bottom: 30px !important;
   max-width: 635px !important;
   width: 100%;
+  margin-bottom: 139px;
   img {
     margin-left: 35px;
   }
@@ -32,13 +37,13 @@
     font-weight: 600;
     font-size: 16px;
     line-height: 20px;
-    color: #ffffff;
-    background: #000034;
+    color: var(--color-white);
+    background: var(--color-button);
     display: flex;
-    justify-content: center;
     align-items: center;
     img {
-      margin-left: 7px;
+      margin-right: 7px;
+      transform: rotate(180deg);
     }
   }
 }
@@ -48,7 +53,7 @@
     font-size: 24px;
     line-height: 34px;
     text-align: center;
-    color: #000034;
+    color: var(--color-text-blackLight);
     margin-bottom: 10px;
   }
   p {
@@ -56,9 +61,9 @@
     font-size: 16px;
     line-height: 26px;
     text-align: center;
-    color: #4b4e68;
+    color: var(--color-texts);
     span {
-      color: #000034;
+      color: var(--color-text-blackLight);
     }
   }
 }
@@ -86,14 +91,14 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
-    color: #4b4e68;
+    color: var(--color-texts);
     margin-bottom: 0px;
   }
   & :last-child {
     font-weight: 500;
     font-size: 14px;
     line-height: 24px;
-    color: #000034;
+    color: var(--color-text-blackLight);
     margin-bottom: 0px;
   }
 }
@@ -101,10 +106,20 @@
   max-width: 445px !important;
   width: 100%;
 }
+@media (max-width: 1130px) {
+  .container-lefth-bottom {
+    padding: 30px;
+  }
+  .lefth-bottom-item__lefth {
+    margin-right: 0px;
+    max-width: unset;
+    width: 358px;
+  }
+}
 @media (max-width: 992px) {
   .thank {
     .s__show {
-      max-width: 635px !important;
+      max-width: 100% !important;
       width: 100%;
       margin: 0px auto;
     }
@@ -112,12 +127,15 @@
       display: none;
     }
     .thank__container-lefth {
-      margin-top: 38px;
+      width: 100%;
+      max-width: 100% !important;
+      margin: 38px auto 42px;
     }
   }
   .container-lefth-bottom {
     width: 100%;
-    max-width: 100%;
+    max-width: 600px;
+    margin: 0px auto;
   }
 
   .thank__container {
@@ -127,31 +145,27 @@
       display: flex;
     }
   }
-}
-@media (max-width: 744px) {
-  .container-lefth-top {
-    padding: 40px;
-  }
   .lefth-bottom-item__lefth {
+    margin-right: 0px;
     max-width: unset;
-    width: 230px !important;
-    margin-right: 68px;
+    min-width: 358px !important;
   }
 }
-@media (max-width: 655px) {
-  .container-lefth-top {
-    padding: 40px;
-  }
-  .lefth-bottom-item__lefth {
-    max-width: unset;
-    width: 198px !important;
-    margin-right: 68px;
-  }
 
+@media (max-width: 744px) {
   .container-lefth-bottom {
-    padding: 60px;
+    width: 100%;
+    max-width: 584px !important;
+    margin: 0px auto;
+    padding: 10px;
+  }
+  .lefth-bottom-item__lefth {
+    margin-right: 0px;
+    max-width: unset;
+    min-width: 340px !important;
   }
 }
+
 @media (max-width: 620px) {
   .container-lefth-top {
     padding: 40px;
@@ -159,14 +173,23 @@
   .lefth-bottom-item__lefth {
     max-width: unset;
     width: 178px !important;
-    margin-right: 68px;
+    margin-right: 0px;
   }
 }
 @media (max-width: 600px) {
   .lefth-bottom-item__lefth {
     max-width: unset;
-    width: 158px !important;
-    margin-right: 48px;
+    width: 100px !important;
+    margin-right: -20px;
+  }
+  .container-lefth-bottom {
+    &:nth-child(2) {
+      .lefth-bottom-item__lefth {
+        p {
+          max-width: 150px;
+        }
+      }
+    }
   }
 }
 @media (max-width: 568px) {
