--- a/src/components/cart/cart.scss
+++ b/src/components/cart/cart.scss
@@ -43,6 +43,11 @@
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
   }
+  img {
+    width: 52px;
+    height: 50px;
+    border-radius: 8px;
+  }
 }
 .cart__top-item-name {
   font-weight: 400;
