--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -9,6 +9,33 @@
     cursor: pointer;
   }
 }
+.header__container {
+  display: flex;
+  justify-content: space-between;
+}
+.shop__count {
+  position: relative;
+  span {
+    position: absolute;
+    top: -7px;
+    right: -7px;
+    width: 18px;
+    height: 18px;
+    background-color: #7782f1;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+  }
+}
 @media (max-width: 744px) {
   .header {
     min-height: 58px;
