--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -2,9 +2,17 @@
   width: 100%;
 }
 .carousel-item {
+  max-width: 790px;
+  width: 100%;
+  max-height: 520px;
+  height: 100%;
+  border-radius: 32px;
   img {
+    max-width: 790px;
     width: 100%;
+    max-height: 520px;
     height: 100%;
+    border-radius: 32px;
   }
 }
 .carousel-indicators {
