--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -4,13 +4,14 @@
 .carousel-item {
   max-width: 790px;
   width: 100%;
-  max-height: 520px;
+  height: 520px !important;
   height: 100%;
   border-radius: 32px;
+
   img {
     max-width: 790px;
     width: 100%;
-    max-height: 520px;
+    height: 520px !important;
     height: 100%;
     border-radius: 32px;
   }
