--- a/src/components/cart/cart.scss
+++ b/src/components/cart/cart.scss
@@ -26,7 +26,9 @@
 }
 .cart__top-item-img {
   position: relative;
-  span {
+  display: flex;
+  align-items: center;
+  .countproduct {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -42,6 +44,12 @@
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
+  }
+  .deleteproduct {
+    display: inline-block;
+    margin-right: 10px;
+    color: var(--color-text-blackLight);
+    cursor: pointer;
   }
   img {
     width: 52px;
@@ -235,6 +243,15 @@
   .subcart__top {
     p {
       font-size: 14px;
+    }
+  }
+}
+@media (max-width: 320px) {
+  .cart__top-item-img {
+    img {
+      width: 42px;
+      height: 40px;
+      border-radius: 8px;
     }
   }
 }
