--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -44,7 +44,7 @@
     max-width: 694px;
     width: 100%;
     img {
-      width: 133px;
+      // width: 133px;
       height: 28px;
     }
   }
@@ -58,7 +58,7 @@
     max-width: 373px;
     width: 100%;
     img {
-      width: 95px;
+      // width: 95px;
       height: 20px;
     }
   }
